@@ -12,6 +12,7 @@ from wagtail.images import urls as wagtailimages_urls
 from wagtail.images.api.v2.endpoints import ImagesAPIEndpoint
 from wagtail.images.tests import urls as wagtailimages_test_urls
 from wagtail.tests.testapp import urls as testapp_urls
+from wagtail.tests.testapp.models import EventSitemap
 
 api_router = WagtailAPIRouter('wagtailapi_v2')
 api_router.register_endpoint('pages', PagesAPIEndpoint)
@@ -29,7 +30,7 @@ urlpatterns = [
     url(r'^sitemap\.xml$', sitemaps_views.sitemap),
 
     url(r'^sitemap-index\.xml$', sitemaps_views.index, {
-        'sitemaps': {'pages': Sitemap},
+        'sitemaps': {'pages': Sitemap, 'events': EventSitemap(request=None)},
         'sitemap_url_name': 'sitemap',
     }),
     url(r'^sitemap-(?P<section>.+)\.xml$', sitemaps_views.sitemap, name='sitemap'),
