@@ -31,6 +31,7 @@ Changelog
  * Fix: Refactor all breakpoint definitions, removing style overlaps (Janneke Janssen)
  * Fix: Updated draftjs_exporter to 2.1.5 to fix bug in handling adjacent entities (Thibaud Colas)
  * Fix: Page titles consisting only of stopwords now generate a non-empty default slug (Andy Chosak, Janneke Janssen)
+ * Fix: Sitemap generator now allows passing a sitemap instance in the URL configuration (Mitchel Cabuloy, Dan Braghis)
 
 
 2.3 LTS (23.10.2018)
